update config class names

--- a/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
+++ b/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
@@ -100,7 +100,7 @@
     "from pprint import pprint as print\n",
     "\n",
     "from promptflow.evals.evaluators import BleuScoreEvaluator, SetMembershipEvaluator, StringCountEvaluator\n",
-    "from promptflow.evals.evaluators import BleuScoreConfig, SetMembershipConfig, StringCountConfig\n",
+    "from promptflow.evals.evaluators import BleuScoreEvaluatorConfig, SetMembershipEvaluatorConfig, StringCountEvaluatorConfig\n",
     "from promptflow.core import AzureOpenAIModelConfiguration\n",
     "from promptflow.evals.evaluate import evaluate, ModelSampler"
    ]
@@ -153,7 +153,7 @@
    "source": [
     "# StringCountGrader\n",
     "string_count = StringCountEvaluator(\n",
-    "    StringCountConfig(case_sensitive=False)\n",
+    "    StringCountEvaluatorConfig(case_sensitive=False)\n",
     ")\n",
     "score = string_count(\n",
     "    reference=\"A A A\", hypothesis=\"A\"\n",
@@ -178,7 +178,7 @@
    "source": [
     "# SetMembershipEvaluator\n",
     "membership = SetMembershipEvaluator(\n",
-    "    SetMembershipConfig(present_grade=1, absent_grade=0, aggregation_type=\"sum\")\n",
+    "    SetMembershipEvaluatorConfig(present_grade=1, absent_grade=0, aggregation_type=\"sum\")\n",
     ")\n",
     "score = membership(\n",
     "    element=\"A\", set=[\"A\", \"B\"]\n",
