update the notebook

--- a/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
+++ b/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
@@ -17,14 +17,14 @@
     "## Grader Architecture\n",
     "The diagram is based on the learning from code [here](https://msdata.visualstudio.com/Vienna/_git/azureml-asset?path=/assets/training/evaluation/src/graders/graders.py&version=GBmain).\n",
     "\n",
-    "![Grader Arch Image](grader_arch.png)\n",
-    "\n",
-    "\n",
     "Three major concepts:\n",
     "- *Model Sampler*: take the evaluation input prompt and generate the completion from the users requested deployed model. \n",
     "- *Graders*: compare and score the evaluation completion against the provided evaluation expected outcome. \n",
     "- *Aggregators* – take the results of the grading step and aggregate them over the evaluation job.\n",
-    "\n"
+    "\n",
+    "**Note**: Shipra's team is working on a new arichitecture design for graders through azureml-metrics SDK. The key concepts should remian the same or similar.\n",
+    "\n",
+    "![Grader Arch Image](grader_arch.png)"
    ]
   },
   {
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-08-07 12:50:07 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
+      "[2024-08-07 14:05:44 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
     "    \"question\": \"What is the capital of France?\",\n",
     "    \"option_a\": \"Paris\",\n",
     "    \"option_b\": \"Berlin\",\n",
-    "    \"option_c\": \"London\", \\\n",
+    "    \"option_c\": \"London\",\n",
     "    \"option_d\": \"Madrid\"\n",
     "}\n",
     "\n",
