--- a/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
+++ b/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
@@ -63,7 +63,7 @@
     "|----------------------|----------------------------------------------------|------------------------------------------------------------------|\n",
     "| **Input/Output**     | Multi-rows                                         | Single row <br> Multi-rows through evaluate API                  |\n",
     "| **Data Access**      | Through Expression Config. Supports three types: <br> 1. Constant Value <br> 2. Column Reference <br> 3. Template String | Similar to column mapping in the evaluation SDK. <br> Most scenarios can be supported through column mapping, but we have a few limitations requiring support from the PF side: <br> 1. Template String <br> ```Question: ${data.question} A: ${data.option_a} B: ${data.option_b} C: ${data.option_c} D: ${data.option_d}``` <br> 2. Column Reference in an array. For example: <br> ```\"element\": \"${data.ground_truth}\", \"set\": [\"A\", \"B\", \"C\", \"D\"]``` |\n",
-    "| **Aggregation**      | Per Grader Aggregation <br> Multiple Aggregation Types Supported | Single Aggregation applied to all evaluators <br> Currently only supports mean |\n",
+    "| **Aggregation**      | Per Grader Aggregation <br> Multiple Aggregation Types Supported <br> Aggregation result can be complex object | Single Aggregation applied to all evaluators <br> Currently only supports mean |\n",
     "| **Model Sampler**    | Generates samples based on formatted chat messages | This concept is not present in pf-evals today, but it functions like a generic target function and can be implemented through prompty. |\n"
    ]
   },
@@ -83,18 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "3b29c8a1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-08-07 14:05:44 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from pprint import pprint as print\n",
@@ -115,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "a3b57f33",
    "metadata": {},
    "outputs": [
@@ -138,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d54c4bc4",
    "metadata": {},
    "outputs": [
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "d383dc32",
    "metadata": {},
    "outputs": [
@@ -177,6 +169,7 @@
    ],
    "source": [
     "# SetMembershipEvaluator\n",
+    "# Question: Do we need evalutor config or just pass the parameters directly?\n",
     "membership = SetMembershipEvaluator(\n",
     "    SetMembershipEvaluatorConfig(present_grade=1, absent_grade=0, aggregation_type=\"sum\")\n",
     ")\n",
@@ -196,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "28517f3f",
    "metadata": {},
    "outputs": [
@@ -266,7 +259,7 @@
     "    evaluator_config={\n",
     "        \"bleu\": {\"reference\": \"${data.ground_truth}\", \"hypothesis\": \"${target.sample}\"},\n",
     "        \"string_count\": {\"reference\": \"${data.ground_truth}\", \"hypothesis\": \"A\"},\n",
-    "        \"membership\": {\"element\": \"${data.ground_truth}\", \"set\": [\"A\", \"B\", \"C\", \"D\"]},\n",
+    "        \"membership\": {\"element\": \"${target.sample}\", \"set\": [\"A\", \"B\", \"C\", \"D\"]},\n",
     "    },\n",
     "    azure_ai_project = {\n",
     "        \"subscription_id\": \"2d385bf4-0756-4a76-aa95-28bf9ed3b625\",\n",
