--- a/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
+++ b/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
@@ -83,16 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3b29c8a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-08-08 10:18:12 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pprint import pprint as print\n",
     "\n",
     "from promptflow.evals.evaluators import BleuScoreEvaluator, SetMembershipEvaluator, StringCountEvaluator\n",
-    "from promptflow.evals.evaluators import BleuScoreEvaluatorConfig, SetMembershipEvaluatorConfig, StringCountEvaluatorConfig\n",
     "from promptflow.core import AzureOpenAIModelConfiguration\n",
     "from promptflow.evals.evaluate import evaluate, ModelSampler"
    ]
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "a3b57f33",
    "metadata": {},
    "outputs": [
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d54c4bc4",
    "metadata": {},
    "outputs": [
@@ -144,9 +151,7 @@
    ],
    "source": [
     "# StringCountGrader\n",
-    "string_count = StringCountEvaluator(\n",
-    "    StringCountEvaluatorConfig(case_sensitive=False)\n",
-    ")\n",
+    "string_count = StringCountEvaluator(case_sensitive=False)\n",
     "score = string_count(\n",
     "    reference=\"A A A\", hypothesis=\"A\"\n",
     ")\n",
@@ -155,24 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "d383dc32",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'set_membership': 1}\n"
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (689802453.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    )\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ')'\n"
      ]
     }
    ],
    "source": [
     "# SetMembershipEvaluator\n",
     "# Question: Do we need evalutor config or just pass the parameters directly?\n",
-    "membership = SetMembershipEvaluator(\n",
-    "    SetMembershipEvaluatorConfig(present_grade=1, absent_grade=0, aggregation_type=\"sum\")\n",
-    ")\n",
+    "membership = SetMembershipEvaluator(present_grade=1, absent_grade=0, aggregation_type=\"sum\")\n",
+    "\n",
     "score = membership(\n",
     "    element=\"A\", set=[\"A\", \"B\"]\n",
     ")\n",
