--- a/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
+++ b/src/promptflow-evals/samples/grader_poc/aoai_evaluator_poc.ipynb
@@ -82,29 +82,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3b29c8a1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-08-08 10:18:12 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from pprint import pprint as print\n",
-    "\n",
-    "from promptflow.evals.evaluators import BleuScoreEvaluator, SetMembershipEvaluator, StringCountEvaluator\n",
-    "from promptflow.core import AzureOpenAIModelConfiguration\n",
-    "from promptflow.evals.evaluate import evaluate, ModelSampler"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5a5c443c",
    "metadata": {},
@@ -114,8 +91,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a3b57f33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-08-08 11:14:04 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from promptflow.evals.evaluators import BleuScoreEvaluator\n",
+    "\n",
+    "# BleuScoreEvaluator\n",
+    "bleu = BleuScoreEvaluator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bb47c860",
    "metadata": {},
    "outputs": [
     {
@@ -127,8 +125,6 @@
     }
    ],
    "source": [
-    "# BleuScoreEvaluator\n",
-    "bleu = BleuScoreEvaluator()\n",
     "score = bleu(\n",
     "    reference=\"this is a book\", hypothesis=\"this is not a book\"\n",
     ")\n",
@@ -140,6 +136,19 @@
    "execution_count": 3,
    "id": "d54c4bc4",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from promptflow.evals.evaluators import StringCountEvaluator\n",
+    "\n",
+    "# StringCountGrader\n",
+    "string_count = StringCountEvaluator(case_sensitive=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "596c7bc5",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -150,8 +159,6 @@
     }
    ],
    "source": [
-    "# StringCountGrader\n",
-    "string_count = StringCountEvaluator(case_sensitive=False)\n",
     "score = string_count(\n",
     "    reference=\"A A A\", hypothesis=\"A\"\n",
     ")\n",
@@ -160,27 +167,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d383dc32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from promptflow.evals.evaluators import SetMembershipEvaluator\n",
+    "\n",
+    "# SetMembershipEvaluator\n",
+    "membership = SetMembershipEvaluator(present_grade=1, absent_grade=0, aggregation_type=\"sum\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "10a55140",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (689802453.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    )\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ')'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'set_membership': 1}\n"
      ]
     }
    ],
    "source": [
-    "# SetMembershipEvaluator\n",
-    "# Question: Do we need evalutor config or just pass the parameters directly?\n",
-    "membership = SetMembershipEvaluator(present_grade=1, absent_grade=0, aggregation_type=\"sum\")\n",
-    "\n",
     "score = membership(\n",
     "    element=\"A\", set=[\"A\", \"B\"]\n",
     ")\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "663dd430",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-08-08 12:20:41 -0700][promptflow][DEBUG] - preparing home directory with default value.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from promptflow.evals.evaluators import ClosedQAModelEvaluator\n",
+    "from promptflow.core import AzureOpenAIModelConfiguration\n",
+    "\n",
+    "# ClosedQAModelEvaluator\n",
+    "model_config = AzureOpenAIModelConfiguration(\n",
+    "    azure_endpoint=os.environ.get(\"AZURE_OPENAI_ENDPOINT\"),\n",
+    "    api_key=os.environ.get(\"AZURE_OPENAI_KEY\"),\n",
+    "    azure_deployment=\"gpt-35-turbo\",\n",
+    ")\n",
+    "\n",
+    "closed_qa = ClosedQAModelEvaluator(\n",
+    "    model_config=model_config,\n",
+    "    true_grade=1,\n",
+    "    false_grade=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "436eef94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'closed_qa': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = closed_qa(\n",
+    "    task=\"What's the capital of France?\",\n",
+    "    submission=\"The capital of France is Paris\",\n",
+    "    criterion=\"Should be a city name\",\n",
+    ")\n",
+    "\n",
     "print(score)"
    ]
   },
@@ -194,19 +266,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "28517f3f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sample': 'A'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "from promptflow.evals.evaluate import evaluate, ModelSampler\n",
+    "from promptflow.core import AzureOpenAIModelConfiguration\n",
+    "\n",
     "# Model Sampler\n",
     "model_config = AzureOpenAIModelConfiguration(\n",
     "    azure_endpoint=os.environ.get(\"AZURE_OPENAI_ENDPOINT\"),\n",
@@ -223,8 +291,16 @@
     "    {\"role\": \"system\", \"content\": \"You are a useful bot. Given a question and some possible answers, reply with the letter of the correct answer.\"},\n",
     "    {\"role\": \"user\", \"content\": \"Question: ${data.question} A: ${data.option_a} B: ${data.option_b} C: ${data.option_c} D: ${data.option_d}\"},\n",
     "]\n",
-    "sampler = ModelSampler(model_config=model_config, trajectory=trajectory, sampling_params=sampling_params)\n",
-    "\n",
+    "sampler = ModelSampler(model_config=model_config, trajectory=trajectory, sampling_params=sampling_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b48c91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "inputs = {\n",
     "    \"question\": \"What is the capital of France?\",\n",
     "    \"option_a\": \"Paris\",\n",
@@ -265,6 +341,7 @@
     "        \"bleu\": {\"reference\": \"${data.ground_truth}\", \"hypothesis\": \"${target.sample}\"},\n",
     "        \"string_count\": {\"reference\": \"${data.ground_truth}\", \"hypothesis\": \"A\"},\n",
     "        \"membership\": {\"element\": \"${target.sample}\", \"set\": [\"A\", \"B\", \"C\", \"D\"]},\n",
+    "        \"closed_qa\": {\"task\": \"${data.question}\", \"submission\": \"${target.sample}\", \"criterion\": \"Should be a city name\"},\n",
     "    },\n",
     "    azure_ai_project = {\n",
     "        \"subscription_id\": \"2d385bf4-0756-4a76-aa95-28bf9ed3b625\",\n",
@@ -284,10 +361,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'bleu.bleu_score_mean': 0.6666666666666666,\n",
+      "{'bleu.bleu_score_mean': 1.0,\n",
       " 'membership.set_membership_sum': 3,\n",
       " 'string_count.string_count_mean': 0.6666666666666666}\n",
-      "'https://ai.azure.com/build/evaluation/promptflow_evals_evaluate_model_sampler_model_sampler_modelsampler_9z7resds_20240807_125153_249924?wsid=/subscriptions/2d385bf4-0756-4a76-aa95-28bf9ed3b625/resourceGroups/rg-ninhuai/providers/Microsoft.MachineLearningServices/workspaces/ninhu-3593'\n"
+      "'https://ai.azure.com/build/evaluation/promptflow_evals_evaluate_model_sampler_model_sampler_modelsampler_lketyonh_20240808_101953_236677?wsid=/subscriptions/2d385bf4-0756-4a76-aa95-28bf9ed3b625/resourceGroups/rg-ninhuai/providers/Microsoft.MachineLearningServices/workspaces/ninhu-3593'\n"
      ]
     }
    ],
